--- a/src/app/component/newUserComponent/new.user.component.html
+++ b/src/app/component/newUserComponent/new.user.component.html
@@ -17,7 +17,7 @@
                 
                 <div class="new-user-cover">
 
-                    <div class="new-user-picture-card" (click)="this.onFileSelectTriggered()">
+                    <div class="new-user-picture" (click)="this.onFileSelectTriggered()">
                         <img [src]="this.avatarURL">
                     </div>
                     <input 
