--- a/src/app/component/anewComponent/anew.component.scss
+++ b/src/app/component/anewComponent/anew.component.scss
@@ -69,15 +69,12 @@
 }
 
 .anew-image {
-  flex: 0 0 49.6%;
-  background-image: url('../../../../public/RedDragon.webp');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  flex: 0 0 18.23%;
+  max-width: 100%;
 }
 
 .anew-details {
-  flex: 0 0 40%;
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
   background-color: whitesmoke;
@@ -98,6 +95,15 @@
   background-color: whitesmoke;
 }
 
+.anew-hashtags {
+  flex: 0 0 8.4%;
+  font-size: 1em;
+  padding-top: 0.4em;
+  padding: 0.25em;
+  background-color: whitesmoke;
+  border: whitesmoke;
+}
+
 .anew-content {
   flex: 1 1 auto;
   display: flex;
@@ -107,7 +113,7 @@
 }
 
 .anew-title {
-  flex: 1 1 8%;
+  flex: 0 0 8%;
   font-size: 1.2em;
   padding: 0.3em;
   padding-left: 0.45em;
