--- a/src/app/component/findexComponent/findex.component.scss
+++ b/src/app/component/findexComponent/findex.component.scss
@@ -6,6 +6,10 @@
   width: 100%;
 }
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 .findex-header {
   position: absolute;
   top: 0%;
@@ -14,7 +18,7 @@
   width: 100%;
 }
 
-.findex {
+.findex-nav{
   position: absolute;
   top: 30%;
   height: 65%;
@@ -22,45 +26,13 @@
   width: 100%;
 }
 
-.findex-index-card {
-  position: absolute;
-  top: 0%;
-  height: 92%;
-  left: 2%;
-  width: 20%;
-  padding: .45em;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: .3em;
-  background-color: #544380;
-  border-radius: 10px;
-}
-
-.findex-index-by {
-  flex: 0 0 auto;
-  height: 10%;
-  width: 100%;
-  font-size: 18px;
-  background-color: whitesmoke;
-  border-radius: 10px;
-}
-
-.findex-listing {
-  flex: 0 0 auto;
-  width: 100%;
-  border-radius: 10px;
-  background-color: whitesmoke;
-}
-
 .findex-list-card {
   position: absolute;
-  top: 0%;
-  height: 92%;
+  top: 30%;
+  height: 61%;
   left: 25%;
   width: 50%;
-  padding: .45em;
-  box-sizing: border-box;
+  padding: .5em;
   display: flex;
   flex-direction: row;
   gap: 0.35em;
@@ -68,17 +40,8 @@
   border-radius: 10px 0px 0px 10px;
 }
 
-.findex-list-nav {
-  flex: 0 0 auto;
-  height: 100%;
-  width: 5%;
-  box-sizing: border-box;
-}
-
 .findex-list-new {
-  flex: 0 0 auto;
-  height: 100%;
-  width: 100%;
+  flex: 0 0 4%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -87,68 +50,87 @@
 }
 
 .findex-listed-container {
-  flex: 0 0 auto;
-  height: 100%;
-  width: 95%;
-  box-sizing: border-box;
+  flex: 1 1 96%;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
   gap: 0.35em;
-  //background-color: #9683c5;
   scrollbar-color: #544380 whitesmoke;
 }
 
-.findex-listed {
+.findex-thread-card {
   flex: 0 0 auto;
-  height: 125px;
-  width: 100%;
+  height: auto;
+  overflow: hidden;
   display: flex;
   flex-direction: row;
-  flex-shrink: 0;
 }
 
-.findex-listed-card {
-  flex: 0 0 auto;
-  height: 100%;
-  width: 97%;
-  padding: 0.35em;
-  box-sizing: border-box;
+.thread-content {
+  flex: 0 1 67%;
   display: flex;
   flex-direction: column;
+  padding: 0.4em;
+  gap: 0.2em;
   background-color: whitesmoke;
 }
 
-.findex-listed-card-title {
-  flex: 0 0 auto;
-  font-size: 20px;
-  height: 40%;
+.thread-title {
+  flex: 0 0 1.6em;
+  font-size: 1.2em;
+  max-height: 3.4em;
+  overflow-wrap: normal;
+  word-break: normal;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  border-bottom: 1px solid black;
 }
 
-.findex-listed-card-date {
-  flex: 0 0 auto;
-  font-size: 16px;
-  padding-left: 0.5em;
+.thread-body {
+  flex: 0 1 5.6em;
+  font-size: 0.8em;
+  line-height: 1.4em;
+  overflow-y: hidden;
+  white-space: normal;
+  overflow-wrap: normal;
+  word-break: normal;
+  text-overflow: ellipsis;
 }
 
-.findex-listed-card-avatar {
-  flex: 0 0 auto;
-  background-image: url('../../../../public/RedDragon.webp');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 100%;
-  aspect-ratio: 1 / 1;
+.thread-footer {
+  flex: 0 0 0.7em;
+  padding-top: 0.25em;
+  display: flex;
+  flex-direction: row;
+  border-top: 1px solid black;
 }
 
-.findex-datepicker-card {
-  position: absolute;
-  top: 0%;
-  height: 92%;
-  right: 2%;
-  width: 20%;
-  background-color: #544380;
-  border-radius: 10px;
+.thread-author{
+  flex: 1;
+  font-size: 0.6em;
+}
+
+.thread-date{
+  flex: 1;
+  font-size: 0.6em;
+}
+
+.thread-category{
+  flex: 1;
+  font-size: 0.6em;
+}
+
+.thread-hashtags{
+  flex: 0 0 0.7em;
+  padding-top: 0.5em;
+  font-size: 0.6em;
+  border-top: 1px solid black;
+}
+
+.thread-image{
+  flex: 0 1 auto;
+  width: 32.6%;
 }
 
 .findex-footer {
